# HackByte

backend/: main.py  pyproject.toml
frontend/: package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: Login.svelte
